k8s/svc.yml

apiVersion: v1
kind: Service
metadata:
  name: ascraper
  namespace: selfservice
spec:
  ports:
  - name: external
    port: 8081
    targetPort: 8081
  selector:
    app: ascraper
